# PenniniBet

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
PenniniBet/: asgi.py  settings.py  urls.py  wsgi.py
PenniniBet/project/: asgi.py  settings.py
bolao/: admin.py  forms.py  models.py  urls.py  views.py
bolao/migrations/: 0001_initial.py
bolao/static/bolao/css/: style.css
bolao/static/bolao/css/base/: _reset.css  _variables.css
bolao/static/bolao/css/components/: _buttons.css  _dropdown.css  _hero.css  _navbar.css  _toast.css
bolao/static/bolao/js/: main.js
bolao/static/bolao/js/components/: activeNavigation.js  mobileMenu.js  profileDropdown.js
bolao/templates/bolao/: index.html  layout.html
bolao/templates/bolao/auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  register.html
bolao/templates/bolao/components/: messages.html  navbar.html
bolao/templates/bolao/includes/: footer.html
bolao/templates/bolao/layout/: base.html
bolao/templates/bolao/pages/: events.html  index.html  orders.html  settings.html
tournament_preview/: index.html
